--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AirBNB - BEM</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300,400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="build/css/app.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@300,400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="build/css/app.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="barra contenedor">
+        <div class="barra__logo">
+          <p class="barra__nombre">Viaje</p>
+        </div>
 
-</body>
+        <nav class="barra__navegacion">
+          <a class="barra__link" href="#">Lugares para hospedarte</a>
+          <a class="barra__link" href="#">Experiencias</a>
+          <a class="barra__link" href="#">Experiencias en línea</a>
+        </nav>
+
+        <nav class="barra__login">
+          <a class="barra__link" href="#">Hazte Anfitrión</a>
+        </nav>
+      </div>
+
+      <form class="formulario contenedor" action="">
+        <div class="formulario__campo">
+          <label class="formulario__label" for="ubicacion">Ubicación</label>
+          <input
+            type="text"
+            class="formulario__input"
+            id="ubicacion"
+            placeholder="¿A donde viajas?"
+          />
+        </div>
+        <div class="formulario__campo">
+          <label class="formulario__label" for="Llegada">Llegada</label>
+          <input type="date" class="formulario__input" id="Llegada" />
+        </div>
+        <div class="formulario__campo">
+          <label class="formulario__label" for="Salida">Salida</label>
+          <input type="date" class="formulario__input" id="Salida" />
+        </div>
+        <div class="formulario__campo">
+          <label class="formulario__label" for="huespedes">Huéspedes</label>
+          <input
+            type="number"
+            class="formulario__input"
+            id="huespedes"
+            placeholder="¿Cuántos?"
+          />
+        </div>
+        <div class="formulario__campo">
+          <input type="submit" class="formulario__submit" value="Buscar" />
+        </div>
+      </form>
+
+      <div class="header__busqueda contenedor">
+        <p class="header__busqueda-label">¿No sabes a donde ir?</p>
+        <a href="#" class="header__busqueda-boton">Búsqueda Flexible</a>
+      </div>
+    </header>
+  </body>
 </html>
