--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </header>
 
-    <section>
+    <section class="destinos contenedor seccion">
       <h2 class="destinos__heading">Descubre alojamientos populares</h2>
 
       <ul class="destinos__grid">
@@ -169,6 +169,56 @@
         </li>
         <!-- Destino  -->
       </ul>
+    </section>
+
+    <section class="lugares contenedor seccion">
+      <h2 class="lugares__heading">Vive en cualquier lugar del mundo</h2>
+
+      <div class="lugares__grid">
+        <div class="lugar">
+          <img
+            class="lugar__imagen"
+            src="build/img/vive_1.jpg"
+            alt="imagen seccion vive"
+          />
+
+          <p class="lugar__nombre">Escapadas al aire libre</p>
+        </div>
+        <!-- Lugar -->
+
+        <div class="lugar">
+          <img
+            class="lugar__imagen"
+            src="build/img/vive_2.jpg"
+            alt="imagen seccion vive"
+          />
+
+          <p class="lugar__nombre">Alojamientos únicos</p>
+        </div>
+        <!-- Lugar -->
+
+        <div class="lugar">
+          <img
+            class="lugar__imagen"
+            src="build/img/vive_3.jpg"
+            alt="imagen seccion vive"
+          />
+
+          <p class="lugar__nombre">Alojamientos enteros</p>
+        </div>
+        <!-- Lugar -->
+
+        <div class="lugar">
+          <img
+            class="lugar__imagen"
+            src="build/img/vive_4.jpg"
+            alt="imagen seccion vive"
+          />
+
+          <p class="lugar__nombre">Con tu mascota</p>
+        </div>
+        <!-- Lugar -->
+      </div>
     </section>
   </body>
 </html>
