--- a/index.html
+++ b/index.html
@@ -231,5 +231,53 @@
         <a href="#" class="anfitrion__enlace">Más Información</a>
       </div>
     </section>
+
+    <main class="experiencia contenedor seccion">
+      <h2 class="experiencias__heading">Descubre Experiencias</h2>
+      <p class="experiencias__descripcion">
+        Actividades únicas con expertos locales, en persona o en línea.
+      </p>
+
+      <div class="experiencias__listado">
+        <div class="experiencia">
+          <img
+            class="experiencia__imagen"
+            src="build/img/experiencia_1.jpg"
+            alt="imagen experiencia"
+          />
+          <p class="experiencia__titulo">Experiencias</p>
+          <p class="experiencia__descripcion">
+            Actividades Locales estés donde estés
+          </p>
+        </div>
+        <!-- Experiencia -->
+
+        <div class="experiencia">
+          <img
+            class="experiencia__imagen"
+            src="build/img/experiencia_2.jpg"
+            alt="imagen experiencia"
+          />
+          <p class="experiencia__titulo">Experiencias</p>
+          <p class="experiencia__descripcion">
+            Visita una ciudad y vive en ella
+          </p>
+        </div>
+        <!-- Experiencia -->
+
+        <div class="experiencia">
+          <img
+            class="experiencia__imagen"
+            src="build/img/experiencia_3.jpg"
+            alt="imagen experiencia"
+          />
+          <p class="experiencia__titulo">Experiencias en línea</p>
+          <p class="experiencia__descripcion">
+            Actividades interactivas en vivo
+          </p>
+        </div>
+        <!-- Experiencia -->
+      </div>
+    </main>
   </body>
 </html>
